@@ -1,0 +1,4 @@
+SOURCE: ANY;
+KEY: asdfasdf;
+FW_ACCESS_TIMEOUT:  3;
+ENCRYPTION_MODE: legacy;
